View: Responsive backend GUI Home - Fixed alignment changes.

--- a/core_modules/Home/View/Style/dashboard.css
+++ b/core_modules/Home/View/Style/dashboard.css
@@ -205,7 +205,8 @@
 }
 
 #dashboard #stats_wrapper {
-    width: 1003px;
+    /*width: 1003px;*/
+    width: 100%;
     float: left;
     clear: left;
     padding: 20px 0 0 0;
@@ -230,7 +231,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    padding: 5.5px 7px 4.5px 7px;
+    padding: 1.5px 7px 4.5px 7px;
     color: #FFFFFF;
     font-size: 24px;
     font-weight: normal;
